<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OptionsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/option_button"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topics" />

        <CheckBox
            android:id="@+id/all_questions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="125dp"
            android:text="@string/all" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/sports_questions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_sports" />

            <CheckBox
                android:id="@+id/physics_questions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_physics" />

            <CheckBox
                android:id="@+id/history_questions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_history" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cinema_questions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_cinema" />

            <CheckBox
                android:id="@+id/geography_questions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_geography" />

            <CheckBox
                android:id="@+id/general_culture_questions_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topic_general_culture" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_questions" />

        <Spinner
            android:id="@+id/number_question_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/difficulty" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/level_hard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_hard" />

        <RadioButton
            android:id="@+id/level_mid_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_middle" />

        <RadioButton
            android:id="@+id/level_ez_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level_ez" />
    </RadioGroup>

    <Switch

        android:id="@+id/cheat_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cheats_active" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_cheats" />

        <Spinner
            android:id="@+id/number_cheats_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </Spinner>
    </LinearLayout>


</LinearLayout>