<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/cheat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="0.1"
            android:text="@string/cheat_button" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/question"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/question_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/colorDefault"
            android:textSize="20sp"
            tools:text="Texto de la pregunta aquí" />


        <!--- botones de siguiente y anterior -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prev_button"
                android:textColor="@color/colorDefault"
                android:textSize="28sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/next_button"
                android:textColor="@color/colorDefault"
                android:textSize="28sp" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <!-- Botones de cierto y falso -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!-- false button -->

            <Button
                android:id="@+id/false_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="40sp"
                android:text="@string/false_button"
                android:textColor="@color/colorRed"
                android:textSize="28sp"
                android:layout_weight="1"/>

            <!-- true button -->
            <Button
                android:id="@+id/true_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="40sp"
                android:text="@string/true_button"
                android:textColor="@color/colorBlue"
                android:textSize="28sp"
                android:layout_weight="1"/>


        </LinearLayout>


    </LinearLayout>

</FrameLayout>